--- a/opdracht/website/index.html
+++ b/opdracht/website/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jamile</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css">''
+  
 <body>
     <header>
 
@@ -15,6 +15,7 @@
         <div class="poster" id="poster1">
             <h1>Enola Holmes</h1>
             <img src="img/enola.jpg" alt="" class="posterimg" id="posterimg1">
+           
         </div>
         <div class="poster" id="poster2">
             <h1>The spy who dumped me</h1>
